--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>github.com.farukonder.mule4</groupId>
+	<groupId>github.com.farukonder.mule4.connectors</groupId>
 	<artifactId>log4m-extension</artifactId>
-	<version>0.0.11</version>
+	<version>0.0.12</version>
 	<packaging>mule-extension</packaging>
 	<name>yet-another-mule4-logger-extension</name>
 
